share/web/css/sunriser.css
/* ... */
.backupdown {
  width:40px;
  height:60px;
  background-color: #fff;
  position:relative;
  margin:40px 0;
  display:inline-block
}
.backupdown:after {
content: " ";
display: block;
height: 0px;
width: 0px;
position: absolute;
border-width: 40px;
border-style: solid;
border-color: white transparent transparent;
margin-bottom: -80px;
margin-left: -20px;
bottom:0
}

/**   Hidden File upload   **/

.hiddenfileupload {
  width: 0px;
  height: 0px;
  overflow: hidden;
}

td.contactlabel {
  vertical-align: top;
}
/**  Sunriser 8 Banderole  **/
.sunriserbanderole{
  right: -165px;
  top: 65px;
  padding: 10px;
  color: #FFF;
  background-color: #E74C3C;
  width: 500px;
  transform: rotate(45deg);
  position: fixed;
  text-align: center;
  z-index: 10;
  text-decoration:none;
  box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.5);
}

/***  RESPONSIVE  ***/

@media screen and (max-width:1100px) {
  .daypicker{
    border:0px solid transparent;
    height: auto;
    width: 137px;
    margin: 10px 0;
    float:right
  }
  .daypicker .day{
    border: 2px solid #CCD7F2;
    border-radius: 3px;
    margin-bottom: 3px;
  }
  .daypicker .day:last-child{
    border-right:2px solid #CCD7F2;
  }
  .daypicker .day label{
    margin: 2px;
  }
  .slidermaster{
    width: 150px;
  }
  .slider{
    width: 200px;
  }
  header{
    padding:30px
  }
  .main{
    padding: 0px;
  }
  .control_center{
    margin-bottom:0px
  }
}
@media screen and (max-width:700px) {
  body{
    background : none;
  }
  header{
    position: absolute;
    z-index: 5;
    width: 170px;
    height:60px;
    padding:0;
  }
  .back_home{
    width:170px
  }
  .sunriser{
    width:100%;
    font-size:20px;
    text-shadow: 0px 0px 0px rgba(0, 0, 0, 0);
    height:60px;
  }
  .sunriser a{
    padding:15px 0 0 50px;
    width: 170px;
    height: 60px;
    display: block;
  }
  .slidermaster{
    width: 120px;
  }
  .slider{
    width: 176px;
  }
  .sunriser span,
  #sunriser_datetime_header {
    display:none
  }
  .back_home{
    position:absolute;
    left:0
  }
  nav {
    width: 100%;
    padding-left:calc(100% - 240px);
    min-height: 60px;
    height: 60px;
    font-size:12px;
    border-bottom: 2px solid rgba(0,0,0,0.6);
    box-shadow: 0 1px 1px rgba(0,0,0,0.15);
  }
  nav .selected a,
  nav .selected{
    height:60px;
    border-bottom: 2px solid rgba(0,0,0,0.3);
  }
  nav .first-level > i,
  nav .first-level > a {
    padding-top:0;
    height: 60px;
    padding-top:17px;
    width:60px;
    display: inline-block;
  }
  .second-nav{
    box-shadow:0 1px 1px rgba(0,0,0,0.15);
  }
  /*nav .first-level:last-child {
      right: 0px;
      bottom:auto
  }*/
  .navclosemenu{
    width:60px;
    height:60px;
    display:block;
    margin-top: -60px;
    transition-duration:0.2s;
    padding-top: 12px;
  }
  .navclosemenu:before{
    content:"\f00d";
    font-family:"IcoMoon";
    font-size:20px;
  }
  .toggle .navclosemenu{
    margin-top:0px;
  }
  nav .first-level {
    overflow: hidden;
    height: 60px;
  }
  .welcometext{
    width:100%;
    margin-left:0px;
    padding-top:100px
  }
  nav .first-level {
      float: left;
  }
  .second-nav{
    top:60px;
    left:0;
    margin-left:0px;
    border-width:0 0 1px 0;
    width:100%
  }
  /*nav .first-level:last-child {
    width: 50px;
  }*/
  .navexemple{
     height: 60px;
  }
  .toggle .second-nav {
    display:table;
  }
  .first-level:first-child .second-nav {
    border-width: 0 1px 1px 0;
  }
  .first-level.toggle::before {
    border-color: transparent transparent #FFF transparent;
    margin: 40px 0px 0px -10px;
    left:auto;
    z-index: 1;
  }
  .sunriser_content {
    padding: 70px 10px 80px 10px;
    margin-left:0;
    min-height: inherit;
  }
  .no_dialogue .sunriser_content{
    padding: 70px 10px 10px 10px;
  }
  .warningbloc{
    margin: -10px -40px 0px;
  }
  .sunriser_dialogue{
    padding: 20px 10px 0px 70px;
    box-shadow: 0px -12px 0 white;
  }
  .sunriser_content .form_title{
    display: block;
    border-bottom: 1px solid #CCD7E2;
    padding: 10px 0 20px 10px;
    margin:0px -10px 10px -10px
  }
  .banderolebox{
    height:50px;
    display:block
  }
  .sunriserbanderole{
    right: auto;
    top: auto;
    bottom:0px;
    color: #FFF;
    width: 100%;
    transform: rotate(0deg);
  }
  .sunriser_content input[type='submit']{
    right:10px;
  }
  .helparea {
    margin-bottom: 0px;
  }
}
@media screen and (max-width:650px) {
  .moretocomeimg,
  .factoryresetimg,
  .firmimg,
  .backupimg,
  .factoryresetimg,
  .weatherintoimg,
  .dayplannerimg,
  .settingledimg,
  .connectledanim{
    display:none
  }
  .factoryresettext,
  .firmtext,
  .backuptext,
  .weatherintrotext,
  .dayplannertext,
  .settingledtext,
  .connectledtext{
    width:100%;
    margin-left:0px
  }
  .moretocometxt{
    padding:50px
  }

}
@media screen and (max-width:500px) {
  .back_home{
    width:60px
  }
  header{
    display:none
  }
  .noscript-text{
    margin: 0;
    left: 10px;
    right: 10px;
    top: 50px;
  }
  .slidermaster{
    width: 80px;
  }
  .slider{
    width: 136px;
  }
  .bigbutton {
    width: 100%;
    margin-bottom: 10px;
  }
}

@media screen and (max-width:350px) {
  .welcometext{
    padding:80px 20px 20px 20px;
  }
  .moretocometxt,
  .factoryresettext,
  .firmtext,
  .backuptext,
  .weatherintrotext,
  .dayplannertext,
  .settingledtext,
  .connectled {
      padding: 20px;
  }
}

